# intune-device-manager

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml  claude.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: graph.rs  lib.rs  main.rs
src/components/: AutopilotView.tsx  DeviceItem.tsx
src/hooks/: useLocalStorage.ts
src/types/: index.ts
src/utils/: device.ts
